Enhance call/log trace
